# gc_impl

./: .gitignore  CMakeLists.txt  README.en.md  README.md
copying/: gc.c  gc.h  test.c
generational/: gc.c  gc.h  marksweep-test.c  marksweep.c  marksweep.h  test.c
mark-compact/: gc.c  gc.h  test.c
mark-sweep/: gc.c  gc.h  test.c
reference-counting/: gc.c  gc.h  test.c
reference-couting/: gc.c  gc.h  test.c
